python-damaris (0.11-0.1) experimental; urgency=low

  * updated debian python policy
  * job descriptions: types are saved and recovered

 -- Achim Gaedke <Achim.Gaedke@physik.tu-darmstadt.de>  Thu, 06 Mar 2008 06:28:13 +0100

python-damaris (0.11-0.0) experimental; urgency=low

  * rename to python-damaris
  * x axis log plot
  * %()s functions for hdf file naming
  * line number widgets for scripts
  * Persistance class added (scope like fade away of signal changes)

 -- Achim Gaedke <Achim.Gaedke@physik.tu-darmstadt.de>  Thu, 07 Feb 2008 02:21:45 +0100 

greendamaris (0.10-0.2) experimental; urgency=medium

  * increased compatibility with pytables version 1 and 2
  * sending signals to backend, when it fails to quit properly
  * correcting quit event return value

 -- Achim Gaedke <Achim.Gaedke@physik.tu-darmstadt.de>  Fri, 12 Oct 2007 13:34:33 +0200

greendamaris (0.10-0.1) experimental; urgency=low

  * added docs and browser button for docs
  * limited number of points to display for GTKCairo backend
  * numarray replaced by numpy
  * adapted width of window to fit even gnome icon size

 -- Achim Gaedke <Achim.Gaedke@physik.tu-darmstadt.de>  Tue, 02 Oct 2007 19:11:33 +0200

greendamaris (0.10-0.0) experimental; urgency=medium

  * started separate source package of pyhton-damaris
  * pycentral used to support both python 2.4 and 2.5

 -- Achim Gaedke <Achim.Gaedke@physik.tu-darmstadt.de>  Sat, 08 Sep 2007 12:56:06 +0200
